a bit more documentation

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,37 +9,37 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=306
+dock_split_2=9
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=462
-dock_hsplit_3=-216
+dock_hsplit_2=227
+dock_hsplit_3=-550
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://main_menu/main_menu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://main_menu/", "res://common/static/")
+dock_filesystem_selected_paths=PackedStringArray("res://cameras/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://common/static/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://night/night.tscn")
+open_scenes=PackedStringArray("res://cameras/camera_manager.tscn")
 center_split_offset=-264
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
-current_scene="res://night/night.tscn"
+selected_main_editor_idx=2
+current_scene="res://cameras/camera_manager.tscn"
 
 [ScriptEditor]
 
-open_scripts=["res://animatronics/animatronic_classes/animatronic_base.gd", "res://animatronics/animatronic_utilities/jumpscares/animatronic_jumpscare.gd", "res://animatronics/animatronic_utilities/positions/animatronic_positions_container.gd", "res://animatronics/blue_animatronic/blue_animatronic.gd", "res://night/clock/clock.gd", "res://main_menu/main_menu.gd", "res://animatronics/animatronic_classes/mask_fooled_animatronic.gd", "res://night/night.gd", "res://animatronics/animatronic_classes/travelling_animatronic.gd", "res://animatronics/yellow_animatronic/yellow_animatronic.gd"]
-selected_script="res://animatronics/animatronic_classes/travelling_animatronic.gd"
-open_help=["MaskFooledAnimatronic"]
+open_scripts=["res://animatronics/animatronic_classes/animatronic_base.gd", "res://animatronics/animatronic_utilities/jumpscares/animatronic_jumpscare.gd", "res://animatronics/animatronic_utilities/positions/animatronic_positions_container.gd", "res://animatronics/blue_animatronic/blue_animatronic.gd", "res://cameras/camera_manager.gd", "res://cameras/cam_button.gd", "res://night/clock/clock.gd", "res://credits.txt", "res://game_over/game_over.gd", "res://main_menu/main_menu.gd", "res://animatronics/animatronic_classes/mask_fooled_animatronic.gd", "res://player/monitor/monitor.gd", "res://night/night.gd", "res://player/player.gd", "res://animatronics/animatronic_classes/travelling_animatronic.gd", "res://animatronics/yellow_animatronic/yellow_animatronic.gd"]
+selected_script="res://animatronics/blue_animatronic/blue_animatronic.gd"
+open_help=["AnimatronicBase"]
 script_split_offset=150
-list_split_offset=0
+list_split_offset=183
 
 [ShaderEditor]
 
