--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -5,7 +5,7 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 26,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 218,
 "row": 123,
 "scroll_position": 105.0,
 "selection": false,
@@ -63,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 89,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 88,
-"row": 61,
-"scroll_position": 36.0,
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,10 +77,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -105,12 +105,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 51,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 1,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 1,
+"selection_to_column": 56,
+"selection_to_line": 1,
 "syntax_highlighter": "Plain Text"
 }
 
@@ -133,11 +137,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 14,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 75,
-"row": 22,
-"scroll_position": 0.0,
+"h_scroll_position": 0,
+"row": 43,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -147,10 +151,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 26,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -203,10 +207,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 56,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -219,7 +223,7 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 65,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 55,
 "row": 3,
 "scroll_position": 0.0,
 "selection": false,
@@ -245,10 +249,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -261,9 +265,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 32,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 207,
+"h_scroll_position": 0,
 "row": 47,
-"scroll_position": 20.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -275,9 +279,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 40,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 361,
 "row": 74,
-"scroll_position": 0.0,
+"scroll_position": 62.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -301,10 +305,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 5,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
